# EventsVisualization

./: .gitigore  CMakeLists.txt  README.md  visualize_result.m
include/acd/: arc_star_detector.h
scripts/: demo1.m
src/: arc_star_detector.cc  demo1.asv  demo1.m  metavision_arc_star_detector.cpp  metavision_sdk_get_started.cpp  visualize_result.m  write_events_to_file2.cpp
